# app/card-service/internal/modules/card/handlers/v1/routes.go
@@ -1,0 +1,17 @@
+package v1
+
+import (
+	"github.com/gin-gonic/gin"
+)
+
+type Routes struct {
+	handler *Handler
+}
+
+func NewRoutes(handler *Handler) *Routes {
+	return &Routes{handler: handler}
+}
+
+func (r *Routes) RegisterRoutes(group *gin.RouterGroup) {
+	group.GET("/cards", r.handler.GetCards)
+}
