# app/card-service/internal/routes/v1/routes.go
@@ -1,10 +1,0 @@
-package v1
-
-import (
-	"github.com/gin-gonic/gin"
-)
-
-func RegisterOrderRoutes(group *gin.RouterGroup) {
-	group.GET("/", OrderHandler)
-	group.GET("/redis", OrderCachingHandler)
-}
